--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.6",
+    "axios": "^1.7.3",
     "dotenv": "^16.4.5",
     "next": "14.2.5",
     "openai": "^4.54.0",
