--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@mui/material": "^5.16.6",
     "axios": "^1.7.3",
     "dotenv": "^16.4.5",
+    "langchain": "^0.2.13",
     "next": "14.2.5",
-    "openai": "^4.54.0",
+    "next-auth": "^4.24.7",
+    "openai": "^4.55.3",
     "react": "^18",
     "react-dom": "^18"
   },
